# calendar-summary

./: .gitignore  CLAUDE.md  README.md  calendar_digest.py  config.example.json  pyproject.toml
docs/superpowers/plans/: 2026-05-12-google-calendar-gmail.md
docs/superpowers/specs/: 2026-05-12-google-calendar-gmail-design.md
systemd/: calendar-digest.service  calendar-digest.timer
